force-app/main/default/objects/IMGA_Risk_Assessment__c/fields/Total_Monthly_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Monthly_Value__c</fullName>
    <description>Current value from the top three business lines.</description>
    <formula>IMGA_Account__r.Total_Monthly_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Current value from the top three business lines.</inlineHelpText>
    <label>Total Monthly Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>