force-app/main/default/objects/IMGA_Risk_Assessment__c/fields/Trigger1__c.field-meta.xml
<CustomField>
    <fullName>Trigger1__c</fullName>
    <label>Trigger</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>