force-app/main/default/objects/IMGA_Risk_Assessment__c/fields/Trigger__c.field-meta.xml
<CustomField>
    <fullName>Trigger__c</fullName>
    <formula>if( isblank(Flow_State__c),&apos;N/A&apos;, Flow_State__r.Trigger__c )</formula>
    <label>Do Not Use</label>
    <type>Text</type>
</CustomField>