force-app/main/default/objects/IMGA_Risk_Assessment__c/recordTypes/At_Risk_BW.recordType-meta.xml
<RecordType>
    <fullName>At_Risk_BW</fullName>
    <active>true</active>
    <label>At Risk - BW</label>
</RecordType>