force-app/main/default/objects/IMGA_Risk_Assessment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>At_Risk_Assessor__c</columns>
    <columns>At_Risk_Category__c</columns>
    <columns>At_Risk_Flag__c</columns>
    <columns>CAP_Status__c</columns>
    <columns>Shred_At_Risk_Score__c</columns>
    <columns>RM_At_Risk_Score__c</columns>
    <columns>DBR_At_Risk_Score__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>